--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "rc-tooltip": "^3.7.0",
+    "react-popover": "^0.5.4",
+    "react-simple-popover": "^0.2.4",
+    "react-tabs": "^2.2.1",
+    "react-tippy": "^1.2.2",
+    "react-tooltip": "^3.4.0"
   }
 }
